5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4140/executions/1801_2581.log
== TEST (2019-06-09 20:03:19) 
-- CODE:
from numpy import *
from math import *
a=0
b=0
c=0
d=0
v1=array(eval(input()))
while(v1[0]>0):
	a=v1[1]+a
	b=v1[2]+b
	c=v1[3]+c
	d=v1[4]+d
	v1=array(eval(input()))
print("ADM")
print("Entrada:",a)
print("Saida:",b)
print("CHAO")
print("Entrada:",c)
print("Saida:",d)

	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-09 20:03:49) 
-- CODE:
from numpy import *
from math import *
a=0
b=0
c=0
d=0
v1=array(eval(input()))
while(v1[0]>=0):
	a=v1[1]+a
	b=v1[2]+b
	c=v1[3]+c
	d=v1[4]+d
	v1=array(eval(input()))
print("ADM")
print("Entrada:",a)
print("Saida:",b)
print("CHAO")
print("Entrada:",c)
print("Saida:",d)

	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-09 20:06:49) 
-- CODE:
from numpy import *
from math import *
a=0
b=0
c=0
d=0
v1=array(eval(input()))
while(v1[0]>=0):
	a=v1[1]+a
	b=v1[2]+b
	c=v1[3]+c
	d=v1[4]+d
	v1=array(eval(input()))
print("ADM")
print("Entrada:",a)
print("Saida:",b)
print("CHAO")
print("Entrada:",c)
print("Saida:",d)

	
-- EXECUTION TIME:
1.19516
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1801/2581/main.py", line 8, in <module>
    while(v1[0]>=0):
IndexError: too many indices for array

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-09 20:06:53) 
-- CODE:
from numpy import *
from math import *
a=0
b=0
c=0
d=0
v1=array(eval(input()))
while(v1[0]>=0):
	a=v1[1]+a
	b=v1[2]+b
	c=v1[3]+c
	d=v1[4]+d
	v1=array(eval(input()))
print("ADM")
print("Entrada:",a)
print("Saida:",b)
print("CHAO")
print("Entrada:",c)
print("Saida:",d)

	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-09 20:10:35) 
-- CODE:
from numpy import *
from math import *
a=0
b=0
c=0
d=0
v1=array(eval(input()))
while(v1[0]=>0):
	a=v1[1]+a
	b=v1[2]+b
	c=v1[3]+c
	d=v1[4]+d
	v1=array(eval(input()))
print("ADM")
print("Entrada:",a)
print("Saida:",b)
print("CHAO")
print("Entrada:",c)
print("Saida:",d)

	
-- ERROR:
File "XXXX", line 8
    while(v1[0]=>0):
               ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-09 20:12:03) 
-- CODE:
from numpy import *
from math import *
a=0
b=0
c=0
d=0
v1=array(eval(input()))
while(v1[0]>=0):
	a=v1[1]+a
	b=v1[2]+b
	c=v1[3]+c
	d=v1[4]+d
	v1=array(eval(input()))
print("ADM")
print("Entrada:",a)
print("Saida:",b)
print("CHAO")
print("Entrada:",c)
print("Saida:",d)

	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-09 20:12:57) 
-- CODE:
from numpy import *
from math import *
a=0
b=0
c=0
d=0
v1=array(eval(input()))
while(v1[0]>=0):
	a=v1[1]+a
	b=v1[2]+b
	c=v1[3]+c
	d=v1[4]+d
	v1=array(eval(input()))
print("ADM")
print("Entrada:",a)
print("Saida:",b)
print("CHAO")
print("Entrada:",c)
print("Saida:",d)

	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-10 21:37:16) 
-- CODE:
from numpy import *
from math import *
a=0
b=0
c=0
d=0
v1=array(eval(input()))
while(v1[0]>=0):
	a=v1[1]+a
	b=v1[2]+b
	c=v1[3]+c
	d=v1[4]+d
	v1=array(eval(input()))
print("ADM")
print("Entrada:",a)
print("Saida:",b)
print("CHAO")
print("Entrada:",c)
print("Saida:",d)

	
-- EXECUTION TIME:
1.07794
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1801/2581/main.py", line 8, in <module>
    while(v1[0]>=0):
IndexError: too many indices for array

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-10 21:37:35) 
-- CODE:
from numpy import *
from math import *
a=0
b=0
c=0
d=0
v1=array(eval(input()))
while(v1[0]>=0):
	a=v1[1]+a
	b=v1[2]+b
	c=v1[3]+c
	d=v1[4]+d
	v1=array(eval(input()))
print("ADM")
print("Entrada:",a)
print("Saida:",b)
print("CHAO")
print("Entrada:",c)
print("Saida:",d)

	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-10 21:38:36) 
-- CODE:
from numpy import *
from math import *
a=0
b=0
c=0
d=0
v1=array(eval(input()))
while(sum(v1)>=0):
	a=v1[1]+a
	b=v1[2]+b
	c=v1[3]+c
	d=v1[4]+d
	v1=array(eval(input()))
print("ADM")
print("Entrada:",a)
print("Saida:",b)
print("CHAO")
print("Entrada:",c)
print("Saida:",d)

	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-10 21:38:48) 
-- CODE:
from numpy import *
from math import *
a=0
b=0
c=0
d=0
v1=array(eval(input()))
while(sum(v1)>=0):
	a=v1[1]+a
	b=v1[2]+b
	c=v1[3]+c
	d=v1[4]+d
	v1=array(eval(input()))
print("ADM")
print("Entrada:",a)
print("Saida:",b)
print("CHAO")
print("Entrada:",c)
print("Saida:",d)

	
-- EXECUTION TIME:
0.997169
-- TEST CASE 1:
---- input:
[0,10,1,1,4]
[60,2,2,10,2]
[120,2,3,22,22]
[15200,20,2,12,16]
[15260,15,25,16,19]
[15320,10,2,2,29]
[15380,50,2,13,23]
[86400,10,16,1,2]
-1
---- correct output:
ADM
Entrada: 119
Saida: 53
CHAO
Entrada: 77
Saida: 117
---- user output:
ADM
Entrada: 119
Saida: 53
CHAO
Entrada: 77
Saida: 117
-- TEST CASE 2:
---- input:
-1
---- correct output:
ADM
Entrada: 0
Saida: 0
CHAO
Entrada: 0
Saida: 0
---- user output:
ADM
Entrada: 0
Saida: 0
CHAO
Entrada: 0
Saida: 0
-- TEST CASE 3:
---- input:
[0,0,1,1,0]
-1
---- correct output:
ADM
Entrada: 0
Saida: 1
CHAO
Entrada: 1
Saida: 0
---- user output:
ADM
Entrada: 0
Saida: 1
CHAO
Entrada: 1
Saida: 0
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
